syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf.docker";
option csharp_namespace = "WavesEnterprise";
option go_package = "wego/pkg/grpc/contract_asset_operation";

import "google/protobuf/wrappers.proto";

message ContractBurn {
  google.protobuf.BytesValue asset_id = 1;
  int64 amount = 2;
}