syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf.docker";
option csharp_namespace = "WavesEnterprise";
option go_package = "wego/pkg/grpc/contract_asset_operation";

message ContractReissue {
  bytes asset_id = 1;
  int64 quantity = 2;
  bool is_reissuable = 3;
}