syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf.docker";
option csharp_namespace = "WavesEnterprise";
option go_package = "wego/pkg/grpc/contract_asset_operation";

import "google/protobuf/wrappers.proto";

message ContractTransferOut {
  google.protobuf.BytesValue asset_id = 1;
  bytes recipient = 2;
  int64 amount = 3;
}